test/seq/cmdlists/invalid_freq_unit.err
SyntaxError: Unknown frequency unit
Line: 3
freq(10) = 200.0 THz
                 ~~~
